--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "express-validator": "^6.14.2",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.8",
+    "sequelize-cli": "^6.5.2",
     "session": "^0.1.0"
   },
   "devDependencies": {
